lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:12: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
			if (getSol()(k)!=getSol(i)) {return false}
                                               ^Lander:19: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
		if (estSolPlat(i)) {a=i;b=getSol(i)}
                                                ^Lander:18: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	while (a==0 && i<=1949) {
        ^